--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,16 +9,16 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "next": "12.0.3",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
-        "design-system": "*"
+        "design-system": "*",
+        "next": "^13.0.5",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
-        "@types/react": "17.0.37",
+        "@types/react": "18.0.25",
         "autoprefixer": "^10.4.0",
         "config": "*",
-        "eslint": "7.32.0",
+        "eslint": "8.28.0",
         "postcss": "^8.4.5",
         "tailwindcss": "^3.0.7",
         "tsconfig": "*",
