--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,6 @@
     "tabWidth": 4,
     "singleQuote": true,
     "arrowParens": "always",
-    "semi": true
+    "semi": true,
+    "jsxSingleQuote": true
 }
