--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "turborepo-basic-shared",
+    "name": "sesamestreet",
     "version": "0.0.0",
     "private": true,
     "workspaces": [
@@ -19,25 +19,6 @@
         "prettier": "^2.8.0",
         "pretty-quick": "^3.1.3",
         "turbo": "1.6.3"
-    },
-    "turbo": {
-        "pipeline": {
-            "build": {
-                "dependsOn": [
-                    "^build"
-                ],
-                "outputs": [
-                    "dist/**",
-                    ".next/**"
-                ]
-            },
-            "lint": {
-                "outputs": []
-            },
-            "dev": {
-                "cache": false
-            }
-        }
     },
     "engines": {
         "npm": ">=7.0.0",
