--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,6 @@
     "singleQuote": true,
     "arrowParens": "always",
     "semi": true,
-    "jsxSingleQuote": true
+    "jsxSingleQuote": true,
+    "trailingComma": "all"
 }
