--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,12 +16,13 @@
     },
     "devDependencies": {
         "@types/react": "18.0.25",
-        "autoprefixer": "^10.4.0",
+        "autoprefixer": "^10.4.13",
         "config": "*",
         "eslint": "8.28.0",
         "next-transpile-modules": "10.0.0",
-        "postcss": "^8.4.5",
-        "tailwindcss": "^3.0.7",
+        "postcss": "^8.4.19",
+        "postcss-cli": "^10.0.0",
+        "tailwindcss": "^3.2.4",
         "tsconfig": "*",
         "typescript": "^4.5.3"
     }
