--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -12,5 +12,11 @@
         "tailwindcss": "^3.2.4",
         "tsconfig": "*",
         "typescript": "^4.5.3"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-regular-svg-icons": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/react-fontawesome": "^0.2.0"
     }
 }
