--- a/apps/sesamestreet/package.json
+++ b/apps/sesamestreet/package.json
@@ -13,6 +13,10 @@
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@next/font": "^13.0.5",
+        "@supabase/auth-helpers-nextjs": "^0.5.2",
+        "@supabase/auth-helpers-react": "^0.3.1",
+        "@supabase/supabase-js": "^2.1.1",
         "design-system": "*",
         "next": "^13.0.5",
         "react": "18.2.0",
