--- a/apps/design-system-stories/package.json
+++ b/apps/design-system-stories/package.json
@@ -9,6 +9,11 @@
         "clean": "rm -rf .turbo && rm -rf node_modules"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-common-types": "^6.2.1",
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-regular-svg-icons": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "design-system": "*"
     },
     "devDependencies": {
