--- a/apps/sesamestreet/package.json
+++ b/apps/sesamestreet/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-common-types": "^6.2.1",
         "@fortawesome/fontawesome-svg-core": "^6.2.1",
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
@@ -16,6 +17,7 @@
         "@next/font": "^13.0.5",
         "@supabase/auth-helpers-nextjs": "^0.5.2",
         "@supabase/auth-helpers-react": "^0.3.1",
+        "@supabase/auth-ui-react": "^0.2.6",
         "@supabase/supabase-js": "^2.1.1",
         "design-system": "*",
         "next": "^13.0.5",
