--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -14,9 +14,12 @@
         "typescript": "^4.5.3"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-common-types": "^6.2.1",
         "@fortawesome/fontawesome-svg-core": "^6.2.1",
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
-        "@fortawesome/react-fontawesome": "^0.2.0"
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@tailwindcss/line-clamp": "^0.4.2",
+        "classnames": "^2.3.2"
     }
 }
