--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@headlessui/react": "^1.7.4",
         "@tailwindcss/line-clamp": "^0.4.2",
         "classnames": "^2.3.2"
     }
