--- a/apps/design-system-stories/package.json
+++ b/apps/design-system-stories/package.json
@@ -14,29 +14,34 @@
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
-        "design-system": "*"
+        "design-system": "workspace:0.0.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
-        "@storybook/addon-a11y": "^6.5.13",
-        "@storybook/addon-actions": "^6.5.13",
-        "@storybook/addon-controls": "^6.5.13",
-        "@storybook/addon-docs": "^6.5.13",
-        "@storybook/addon-essentials": "^6.5.13",
-        "@storybook/addon-interactions": "^6.5.13",
-        "@storybook/addon-links": "^6.5.13",
+        "@babel/core": "^7.20.5",
+        "@storybook/addon-a11y": "^6.5.14",
+        "@storybook/addon-actions": "^6.5.14",
+        "@storybook/addon-controls": "^6.5.14",
+        "@storybook/addon-docs": "^6.5.14",
+        "@storybook/addon-essentials": "^6.5.14",
+        "@storybook/addon-interactions": "^6.5.14",
+        "@storybook/addon-links": "^6.5.14",
         "@storybook/addon-postcss": "^2.0.0",
-        "@storybook/builder-webpack5": "^6.5.13",
-        "@storybook/manager-webpack5": "^6.5.13",
-        "@storybook/react": "^6.5.13",
-        "@types/react": "^18.0.25",
+        "@storybook/builder-webpack5": "^6.5.14",
+        "@storybook/manager-webpack5": "^6.5.14",
+        "@storybook/react": "^6.5.14",
+        "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.19",
-        "postcss-cli": "^10.0.0",
-        "postcss-import": "^15.0.0",
-        "postcss-loader": "^7.0.1",
+        "postcss-cli": "^10.1.0",
+        "postcss-import": "^15.0.1",
+        "postcss-loader": "^7.0.2",
+        "require-from-string": "^2.0.2",
         "tailwindcss": "^3.2.4",
-        "tsconfig": "*",
-        "typescript": "^4.5.3"
+        "tsconfig": "workspace:0.0.0",
+        "typescript": "^4.9.3",
+        "webpack": "^5.75.0"
     }
 }
