--- a/apps/sesamestreet/package.json
+++ b/apps/sesamestreet/package.json
@@ -14,25 +14,26 @@
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
-        "@next/font": "^13.0.5",
+        "@next/font": "^13.0.6",
         "@supabase/auth-helpers-nextjs": "^0.5.2",
         "@supabase/auth-helpers-react": "^0.3.1",
         "@supabase/auth-ui-react": "^0.2.6",
         "@supabase/supabase-js": "^2.1.1",
-        "design-system": "*",
-        "next": "^13.0.5",
+        "design-system": "workspace:0.0.0",
+        "encoding": "^0.1.13",
+        "next": "^13.0.6",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     },
     "devDependencies": {
-        "@types/react": "18.0.25",
+        "@types/react": "18.0.26",
         "autoprefixer": "^10.4.13",
-        "config": "*",
-        "eslint": "8.28.0",
+        "config": "workspace:0.0.0",
+        "eslint": "8.29.0",
         "postcss": "^8.4.19",
-        "postcss-cli": "^10.0.0",
+        "postcss-cli": "^10.1.0",
         "tailwindcss": "^3.2.4",
-        "tsconfig": "*",
-        "typescript": "^4.5.3"
+        "tsconfig": "workspace:0.0.0",
+        "typescript": "^4.9.3"
     }
 }
