--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     ],
     "scripts": {
         "build": "turbo run build",
-        "dev": "turbo run dev --parallel",
-        "storybook": "turbo run storybook --parallel",
+        "dev": "turbo run dev",
+        "storybook": "turbo run storybook",
         "lint": "turbo run lint",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "preinstall": "npx only-allow pnpm"
     },
     "devDependencies": {
         "husky": "^8.0.2",
+        "only-allow": "^1.1.1",
+        "pnpm": "^7.18.0",
         "prettier": "^2.8.0",
         "pretty-quick": "^3.1.3",
         "turbo": "1.6.3"
