--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,14 +6,15 @@
         "eslint-preset.js"
     ],
     "dependencies": {
-        "eslint-config-next": "^13.0.5",
-        "eslint-config-prettier": "^8.3.0"
+        "eslint-config-next": "^13.0.6",
+        "eslint-config-prettier": "^8.5.0"
     },
     "devDependencies": {
-        "eslint": "^8.8.0",
-        "eslint-plugin-prettier": "^4.0.0",
+        "eslint": "^8.29.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-simple-import-sort": "^8.0.0",
-        "prettier": "^2.7.1",
-        "prettier-plugin-tailwindcss": "^0.2.0"
+        "prettier": "^2.8.0",
+        "prettier-plugin-tailwindcss": "^0.2.0",
+        "typescript": "^4.9.3"
     }
 }
