--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -5,13 +5,13 @@
     "types": "./index.tsx",
     "license": "MIT",
     "devDependencies": {
-        "@types/react": "^18.0.25",
+        "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.19",
         "tailwindcss": "^3.2.4",
-        "tsconfig": "*",
-        "typescript": "^4.5.3"
+        "tsconfig": "workspace:0.0.0",
+        "typescript": "^4.9.3"
     },
     "dependencies": {
         "@fortawesome/fontawesome-common-types": "^6.2.1",
@@ -21,6 +21,8 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@headlessui/react": "^1.7.4",
         "@tailwindcss/line-clamp": "^0.4.2",
-        "classnames": "^2.3.2"
+        "classnames": "^2.3.2",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
     }
 }
