--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# IDE's
 .idea
 .vscode
+*.code-workspace
 
 # dependencies
 node_modules
