--- a/apps/design-system-stories/package.json
+++ b/apps/design-system-stories/package.json
@@ -41,6 +41,7 @@
         "require-from-string": "^2.0.2",
         "tailwindcss": "^3.2.4",
         "tsconfig": "workspace:0.0.0",
+        "config": "workspace:0.0.0",
         "typescript": "^4.9.3",
         "webpack": "^5.75.0"
     }
