--- a/apps/sesamestreet/package.json
+++ b/apps/sesamestreet/package.json
@@ -16,9 +16,8 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@next/font": "^13.0.6",
         "@supabase/auth-helpers-nextjs": "^0.5.2",
-        "@supabase/auth-helpers-react": "^0.3.1",
-        "@supabase/auth-ui-react": "^0.2.6",
         "@supabase/supabase-js": "^2.1.1",
+        "clsx": "^1.2.1",
         "design-system": "workspace:0.0.0",
         "encoding": "^0.1.13",
         "next": "^13.0.6",
