--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -21,7 +21,7 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@headlessui/react": "^1.7.4",
         "@tailwindcss/line-clamp": "^0.4.2",
-        "classnames": "^2.3.2",
+        "clsx": "^1.2.1",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     }
