--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "preinstall": "npx only-allow pnpm"
     },
     "devDependencies": {
+        "eslint": "^8.29.0",
         "husky": "^8.0.2",
+        "lint-staged": "^13.0.4",
         "only-allow": "^1.1.1",
         "pnpm": "^7.18.0",
         "prettier": "^2.8.0",
@@ -26,5 +28,8 @@
     "engines": {
         "npm": ">=7.0.0",
         "node": ">=14.0.0"
+    },
+    "lint-staged": {
+        "*.{ts,tsx}": "eslint --fix"
     }
 }
