--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -23,6 +23,7 @@
         "@tailwindcss/line-clamp": "^0.4.2",
         "clsx": "^1.2.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "config": "workspace:0.0.0"
     }
 }
