--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -19,11 +19,12 @@
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
-        "@headlessui/react": "^1.7.4",
+        "@radix-ui/react-avatar": "^1.0.1",
         "@tailwindcss/line-clamp": "^0.4.2",
         "clsx": "^1.2.1",
+        "config": "workspace:0.0.0",
+        "utils": "workspace:0.0.0",
         "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "config": "workspace:0.0.0"
+        "react-dom": "18.2.0"
     }
 }
