--- a/apps/sesamestreet/tsconfig.json
+++ b/apps/sesamestreet/tsconfig.json
@@ -1,5 +1,13 @@
 {
     "extends": "tsconfig/nextjs.json",
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+    "compilerOptions": {
+        "baseUrl": ".",
+        "plugins": [
+            {
+                "name": "next"
+            }
+        ]
+    }
 }
