--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,16 +5,16 @@
     "files": [
         "eslint-preset.js"
     ],
-    "dependencies": {
-        "eslint-config-next": "^13.0.6",
-        "eslint-config-prettier": "^8.5.0"
-    },
     "devDependencies": {
         "eslint": "^8.29.0",
+        "eslint-config-next": "^13.0.6",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-simple-import-sort": "^8.0.0",
+        "postcss": "^8.4.19",
         "prettier": "^2.8.0",
         "prettier-plugin-tailwindcss": "^0.2.0",
+        "tailwindcss": "^3.2.4",
         "typescript": "^4.9.3"
     }
 }
