--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -20,11 +20,12 @@
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@radix-ui/react-avatar": "^1.0.1",
+        "@radix-ui/react-tooltip": "^1.0.2",
         "@tailwindcss/line-clamp": "^0.4.2",
         "clsx": "^1.2.1",
         "config": "workspace:0.0.0",
-        "utils": "workspace:0.0.0",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "utils": "workspace:0.0.0"
     }
 }
