--- a/apps/design-system-stories/package.json
+++ b/apps/design-system-stories/package.json
@@ -14,7 +14,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
-        "design-system": "workspace:0.0.0",
+        "design-system": "*",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     },
@@ -40,8 +40,8 @@
         "postcss-loader": "^7.0.2",
         "require-from-string": "^2.0.2",
         "tailwindcss": "^3.2.4",
-        "tsconfig": "workspace:0.0.0",
-        "config": "workspace:0.0.0",
+        "tsconfig": "*",
+        "config": "*",
         "typescript": "^4.9.3",
         "webpack": "^5.75.0"
     }
