--- a/apps/sesamestreet/package.json
+++ b/apps/sesamestreet/package.json
@@ -18,7 +18,7 @@
         "@supabase/auth-helpers-nextjs": "^0.5.2",
         "@supabase/supabase-js": "^2.1.1",
         "clsx": "^1.2.1",
-        "design-system": "workspace:0.0.0",
+        "design-system": "*",
         "encoding": "^0.1.13",
         "next": "^13.0.6",
         "react": "18.2.0",
@@ -28,12 +28,12 @@
         "@next/bundle-analyzer": "^13.0.6",
         "@types/react": "18.0.26",
         "autoprefixer": "^10.4.13",
-        "config": "workspace:0.0.0",
+        "config": "*",
         "eslint": "8.29.0",
         "postcss": "^8.4.19",
         "postcss-cli": "^10.1.0",
         "tailwindcss": "^3.2.4",
-        "tsconfig": "workspace:0.0.0",
+        "tsconfig": "*",
         "typescript": "^4.9.3"
     }
 }
