--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -10,7 +10,7 @@
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.19",
         "tailwindcss": "^3.2.4",
-        "tsconfig": "workspace:0.0.0",
+        "tsconfig": "*",
         "typescript": "^4.9.3"
     },
     "dependencies": {
@@ -23,9 +23,9 @@
         "@radix-ui/react-tooltip": "^1.0.2",
         "@tailwindcss/line-clamp": "^0.4.2",
         "clsx": "^1.2.1",
-        "config": "workspace:0.0.0",
+        "config": "*",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "utils": "workspace:0.0.0"
+        "utils": "*"
     }
 }
