Start of cross-platform React Native templatee

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sesamestreet",
+    "name": "sesamestreet-monorepo",
     "version": "0.0.0",
     "private": true,
     "workspaces": [
